[package]
name = "vatsim-open-data"
version = "0.1.0"
edition = "2021"
authors = ["Robin Gloster <mail@glob.in>"]
description = "A library to parse, validate and process the VATSIM open data repository"
# docs
license = "MIT OR Apache-2.0"
# repository

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
geo = { version = "0.29.0", features = ["use-serde"] }
geojson = "0.24.1"
itertools = "0.13.0"
reqwest = { version = "0.12.7", features = [
  "blocking",
  "rustls-tls",
], default-features = false }
scraper = "0.21.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.124"
thiserror = "2"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

# TODO fix
# let-underscore-must-use = "warn"
print_stderr = "allow"
pedantic = { level = "warn", priority = -1 }
